# inout

./: CMakeLists.txt  Main.qml  main.cpp  resources.qrc  splashscreencontroller.cpp  splashscreencontroller.h
Classes/: CMakeLists.txt  notmain.cpp  notmain.h  usedinothers.cpp  usedinothers.h
SignIn/: CMakeLists.txt  LoginForum.qml  Logo.qml  SignIn.qml  Welcome.qml  signinviewmodel.cpp  signinviewmodel.h
android/: AndroidManifest.xml  build.gradle  local.properties
android/res/drawable/: splash.xml
android/res/values/: themes.xml
android/src/main/: MainActivtiy.java
